objects/Mask_WIP__c.object
<CustomObject>
    <fields>
        <fullName>Mask_Set_Title_Text__c</fullName>
        <label>Mask Set Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Set_Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mask Set Title</label>
        <referenceTo>Mask_Set_Title__c</referenceTo>
        <relationshipName>Mask_WIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mask_Title__c</fullName>
        <externalId>true</externalId>
        <label>Mask_Title</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <label>Shipped_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mask WIP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mask_Title__c</columns>
        <columns>Mask_Set_Title__c</columns>
        <columns>Mask_Set_Title_Text__c</columns>
        <columns>Shipped_Date__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Swift_Filter</fullName>
        <columns>NAME</columns>
        <columns>Mask_Title__c</columns>
        <columns>Mask_Set_Title__c</columns>
        <columns>Mask_Set_Title_Text__c</columns>
        <columns>Shipped_Date__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>N3XST15</value>
        </filters>
        <label>Swift Filter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Mask_WIP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mask WIP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>